# vscode-miscar

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  build.py  package-lock.json  package.json  roborio.toolchain.cmake  test.json  versions.json  webpack.config.js
src/: extension.ts  utilities.ts  versions.ts
src/tasks/: buildLocal.ts  buildRoboRIO.ts  clearCompileFlags.ts  createCompileFlags.ts  createIndex.ts  deploy.ts  deployPathPlanner.ts  fastDeploy.ts  newClass.ts  openCommandPalette.ts  openInstallDirectory.ts  runSimulation.ts  startTool.ts  test.ts  wpiformat.ts
src/vendordeps/: index.ts  pathPlanner.ts  phoenix.ts  phoenix5.ts  phoenix6.ts  photonlib.ts  revlib.ts
