
#firsttime
cmake_minimum_required(VERSION 3.10)
set(CMAKE_CPP_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
project(robot)

file(GLOB_RECURSE SOURCES "src/main/cpp/*.cpp")
add_executable(robot ${SOURCES})
file(GLOB_RECURSE LIBMISCAR "c:/Users/progr/Developer/libmiscar/src/main/cpp/miscar/*.cpp" )
target_sources(robot PRIVATE  ${LIBMISCAR})
set_property(TARGET robot PROPERTY CXX_STANDARD 17)
target_compile_options(robot PUBLIC -Wno-psabi)
include_directories(src/main/cpp)

include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/visa")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/netcomm")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/chipobject")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/wpilibc-cpp")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/wpiutil-cpp")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/wpimath-cpp")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/ntcore-cpp")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/cscore-cpp")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/hal-cpp")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/cameraserver-cpp")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/wpilibNewCommands-cpp")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/opencv-cpp")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/wpiapi-cpp")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/api-cpp")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/cci")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/wpiapi-cpp-sim")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/api-cpp-sim")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/cci-sim")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/simTalonSRX")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/simTalonFX")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/simVictorSPX")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/simPigeonIMU")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/simCANCoder")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/REVLib-cpp")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/REVLib-driver")
include_directories(SYSTEM "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/headers/PhotonLib-cpp")
include_directories(SYSTEM "c:/Users/progr/Developer/vscode-miscar/src/main/cpp")
include_directories(SYSTEM "c:/Users/progr/Developer/libmiscar/src/main/cpp")
if(IS_ROBORIO)



add_library(visa_libvisa STATIC IMPORTED)
set_property(TARGET visa_libvisa PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/visa/linux/athena/shared/libvisa.so.21.0.0")
set_target_properties(visa_libvisa PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot visa_libvisa)


add_library(netcomm_libFRC_NetworkCommunication STATIC IMPORTED)
set_property(TARGET netcomm_libFRC_NetworkCommunication PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/netcomm/linux/athena/shared/libFRC_NetworkCommunication.so.22.0.0")
set_target_properties(netcomm_libFRC_NetworkCommunication PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot netcomm_libFRC_NetworkCommunication)


add_library(chipobject_libRoboRIO_FRC_ChipObject STATIC IMPORTED)
set_property(TARGET chipobject_libRoboRIO_FRC_ChipObject PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/chipobject/linux/athena/shared/libRoboRIO_FRC_ChipObject.so.22.0.0")
set_target_properties(chipobject_libRoboRIO_FRC_ChipObject PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot chipobject_libRoboRIO_FRC_ChipObject)


add_library(runtime_libembcanshim STATIC IMPORTED)
set_property(TARGET runtime_libembcanshim PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/runtime/linux/athena/shared/libembcanshim.so")
set_target_properties(runtime_libembcanshim PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot runtime_libembcanshim)


add_library(runtime_libfpgalvshim STATIC IMPORTED)
set_property(TARGET runtime_libfpgalvshim PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/runtime/linux/athena/shared/libfpgalvshim.so")
set_target_properties(runtime_libfpgalvshim PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot runtime_libfpgalvshim)


add_library(wpilibc-cpp_libwpilibc STATIC IMPORTED)
set_property(TARGET wpilibc-cpp_libwpilibc PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/wpilibc-cpp/linux/athena/shared/libwpilibc.so")
set_target_properties(wpilibc-cpp_libwpilibc PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpilibc-cpp_libwpilibc)


add_library(wpiutil-cpp_libwpiutil STATIC IMPORTED)
set_property(TARGET wpiutil-cpp_libwpiutil PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/wpiutil-cpp/linux/athena/shared/libwpiutil.so")
set_target_properties(wpiutil-cpp_libwpiutil PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpiutil-cpp_libwpiutil)


add_library(wpiutil-cpp_libwpiutiljni STATIC IMPORTED)
set_property(TARGET wpiutil-cpp_libwpiutiljni PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/wpiutil-cpp/linux/athena/shared/libwpiutiljni.so")
set_target_properties(wpiutil-cpp_libwpiutiljni PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpiutil-cpp_libwpiutiljni)


add_library(wpimath-cpp_libwpimath STATIC IMPORTED)
set_property(TARGET wpimath-cpp_libwpimath PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/wpimath-cpp/linux/athena/shared/libwpimath.so")
set_target_properties(wpimath-cpp_libwpimath PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpimath-cpp_libwpimath)


add_library(wpimath-cpp_libwpimathjni STATIC IMPORTED)
set_property(TARGET wpimath-cpp_libwpimathjni PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/wpimath-cpp/linux/athena/shared/libwpimathjni.so")
set_target_properties(wpimath-cpp_libwpimathjni PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpimath-cpp_libwpimathjni)


add_library(ntcore-cpp_libntcore STATIC IMPORTED)
set_property(TARGET ntcore-cpp_libntcore PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/ntcore-cpp/linux/athena/shared/libntcore.so")
set_target_properties(ntcore-cpp_libntcore PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot ntcore-cpp_libntcore)


add_library(ntcore-cpp_libntcorejni STATIC IMPORTED)
set_property(TARGET ntcore-cpp_libntcorejni PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/ntcore-cpp/linux/athena/shared/libntcorejni.so")
set_target_properties(ntcore-cpp_libntcorejni PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot ntcore-cpp_libntcorejni)


add_library(cscore-cpp_libcscore STATIC IMPORTED)
set_property(TARGET cscore-cpp_libcscore PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/cscore-cpp/linux/athena/shared/libcscore.so")
set_target_properties(cscore-cpp_libcscore PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot cscore-cpp_libcscore)


add_library(cscore-cpp_libcscorejni STATIC IMPORTED)
set_property(TARGET cscore-cpp_libcscorejni PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/cscore-cpp/linux/athena/shared/libcscorejni.so")
set_target_properties(cscore-cpp_libcscorejni PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot cscore-cpp_libcscorejni)


add_library(hal-cpp_libwpiHal STATIC IMPORTED)
set_property(TARGET hal-cpp_libwpiHal PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/hal-cpp/linux/athena/shared/libwpiHal.so")
set_target_properties(hal-cpp_libwpiHal PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot hal-cpp_libwpiHal)


add_library(hal-cpp_libwpiHaljni STATIC IMPORTED)
set_property(TARGET hal-cpp_libwpiHaljni PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/hal-cpp/linux/athena/shared/libwpiHaljni.so")
set_target_properties(hal-cpp_libwpiHaljni PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot hal-cpp_libwpiHaljni)


add_library(cameraserver-cpp_libcameraserver STATIC IMPORTED)
set_property(TARGET cameraserver-cpp_libcameraserver PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/cameraserver-cpp/linux/athena/shared/libcameraserver.so")
set_target_properties(cameraserver-cpp_libcameraserver PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot cameraserver-cpp_libcameraserver)


add_library(wpilibNewCommands-cpp_libwpilibNewCommands STATIC IMPORTED)
set_property(TARGET wpilibNewCommands-cpp_libwpilibNewCommands PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/wpilibNewCommands-cpp/linux/athena/shared/libwpilibNewCommands.so")
set_target_properties(wpilibNewCommands-cpp_libwpilibNewCommands PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpilibNewCommands-cpp_libwpilibNewCommands)


add_library(opencv-cpp_libopencv_calib3d STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_calib3d PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_calib3d.so.4.5")
set_target_properties(opencv-cpp_libopencv_calib3d PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_calib3d)


add_library(opencv-cpp_libopencv_core STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_core PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_core.so.4.5")
set_target_properties(opencv-cpp_libopencv_core PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_core)


add_library(opencv-cpp_libopencv_features2d STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_features2d PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_features2d.so.4.5")
set_target_properties(opencv-cpp_libopencv_features2d PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_features2d)


add_library(opencv-cpp_libopencv_flann STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_flann PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_flann.so.4.5")
set_target_properties(opencv-cpp_libopencv_flann PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_flann)


add_library(opencv-cpp_libopencv_gapi STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_gapi PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_gapi.so.4.5")
set_target_properties(opencv-cpp_libopencv_gapi PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_gapi)


add_library(opencv-cpp_libopencv_highgui STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_highgui PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_highgui.so.4.5")
set_target_properties(opencv-cpp_libopencv_highgui PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_highgui)


add_library(opencv-cpp_libopencv_imgcodecs STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_imgcodecs PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_imgcodecs.so.4.5")
set_target_properties(opencv-cpp_libopencv_imgcodecs PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_imgcodecs)


add_library(opencv-cpp_libopencv_imgproc STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_imgproc PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_imgproc.so.4.5")
set_target_properties(opencv-cpp_libopencv_imgproc PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_imgproc)


add_library(opencv-cpp_libopencv_ml STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_ml PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_ml.so.4.5")
set_target_properties(opencv-cpp_libopencv_ml PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_ml)


add_library(opencv-cpp_libopencv_objdetect STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_objdetect PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_objdetect.so.4.5")
set_target_properties(opencv-cpp_libopencv_objdetect PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_objdetect)


add_library(opencv-cpp_libopencv_photo STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_photo PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_photo.so.4.5")
set_target_properties(opencv-cpp_libopencv_photo PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_photo)


add_library(opencv-cpp_libopencv_stitching STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_stitching PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_stitching.so.4.5")
set_target_properties(opencv-cpp_libopencv_stitching PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_stitching)


add_library(opencv-cpp_libopencv_video STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_video PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_video.so.4.5")
set_target_properties(opencv-cpp_libopencv_video PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_video)


add_library(opencv-cpp_libopencv_videoio STATIC IMPORTED)
set_property(TARGET opencv-cpp_libopencv_videoio PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/opencv-cpp/linux/athena/shared/libopencv_videoio.so.4.5")
set_target_properties(opencv-cpp_libopencv_videoio PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_libopencv_videoio)


add_library(wpiapi-cpp_libCTRE_Phoenix_WPI STATIC IMPORTED)
set_property(TARGET wpiapi-cpp_libCTRE_Phoenix_WPI PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/wpiapi-cpp/linux/athena/shared/libCTRE_Phoenix_WPI.so")
set_target_properties(wpiapi-cpp_libCTRE_Phoenix_WPI PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpiapi-cpp_libCTRE_Phoenix_WPI)


add_library(api-cpp_libCTRE_Phoenix STATIC IMPORTED)
set_property(TARGET api-cpp_libCTRE_Phoenix PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/api-cpp/linux/athena/shared/libCTRE_Phoenix.so")
set_target_properties(api-cpp_libCTRE_Phoenix PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot api-cpp_libCTRE_Phoenix)


add_library(cci_libCTRE_PhoenixCCI STATIC IMPORTED)
set_property(TARGET cci_libCTRE_PhoenixCCI PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/cci/linux/athena/shared/libCTRE_PhoenixCCI.so")
set_target_properties(cci_libCTRE_PhoenixCCI PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot cci_libCTRE_PhoenixCCI)


add_library(REVLib-cpp_libREVLib STATIC IMPORTED)
set_property(TARGET REVLib-cpp_libREVLib PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/REVLib-cpp/linux/athena/shared/libREVLib.so")
set_target_properties(REVLib-cpp_libREVLib PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot REVLib-cpp_libREVLib)


add_library(REVLib-driver_libREVLibDriver STATIC IMPORTED)
set_property(TARGET REVLib-driver_libREVLibDriver PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/REVLib-driver/linux/athena/shared/libREVLibDriver.so")
set_target_properties(REVLib-driver_libREVLibDriver PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot REVLib-driver_libREVLibDriver)


add_library(PhotonLib-cpp_libPhoton STATIC IMPORTED)
set_property(TARGET PhotonLib-cpp_libPhoton PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/roborio/PhotonLib-cpp/linux/athena/shared/libPhoton.so")
set_target_properties(PhotonLib-cpp_libPhoton PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot PhotonLib-cpp_libPhoton)
else()
add_library(wpilibc-cpp_wpilibc STATIC IMPORTED)
set_property(TARGET wpilibc-cpp_wpilibc PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/wpilibc-cpp/windows/x86-64/shared/wpilibc.lib")
set_target_properties(wpilibc-cpp_wpilibc PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpilibc-cpp_wpilibc)
add_library(wpiutil-cpp_wpiutil STATIC IMPORTED)
set_property(TARGET wpiutil-cpp_wpiutil PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/wpiutil-cpp/windows/x86-64/shared/wpiutil.lib")
set_target_properties(wpiutil-cpp_wpiutil PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpiutil-cpp_wpiutil)
add_library(wpiutil-cpp_wpiutiljni STATIC IMPORTED)
set_property(TARGET wpiutil-cpp_wpiutiljni PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/wpiutil-cpp/windows/x86-64/shared/wpiutiljni.lib")
set_target_properties(wpiutil-cpp_wpiutiljni PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpiutil-cpp_wpiutiljni)
add_library(wpimath-cpp_wpimath STATIC IMPORTED)
set_property(TARGET wpimath-cpp_wpimath PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/wpimath-cpp/windows/x86-64/shared/wpimath.lib")
set_target_properties(wpimath-cpp_wpimath PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpimath-cpp_wpimath)
add_library(wpimath-cpp_wpimathjni STATIC IMPORTED)
set_property(TARGET wpimath-cpp_wpimathjni PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/wpimath-cpp/windows/x86-64/shared/wpimathjni.lib")
set_target_properties(wpimath-cpp_wpimathjni PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpimath-cpp_wpimathjni)
add_library(ntcore-cpp_ntcore STATIC IMPORTED)
set_property(TARGET ntcore-cpp_ntcore PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/ntcore-cpp/windows/x86-64/shared/ntcore.lib")
set_target_properties(ntcore-cpp_ntcore PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot ntcore-cpp_ntcore)
add_library(ntcore-cpp_ntcorejni STATIC IMPORTED)
set_property(TARGET ntcore-cpp_ntcorejni PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/ntcore-cpp/windows/x86-64/shared/ntcorejni.lib")
set_target_properties(ntcore-cpp_ntcorejni PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot ntcore-cpp_ntcorejni)
add_library(cscore-cpp_cscore STATIC IMPORTED)
set_property(TARGET cscore-cpp_cscore PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/cscore-cpp/windows/x86-64/shared/cscore.lib")
set_target_properties(cscore-cpp_cscore PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot cscore-cpp_cscore)
add_library(cscore-cpp_cscorejni STATIC IMPORTED)
set_property(TARGET cscore-cpp_cscorejni PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/cscore-cpp/windows/x86-64/shared/cscorejni.lib")
set_target_properties(cscore-cpp_cscorejni PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot cscore-cpp_cscorejni)
add_library(hal-cpp_wpiHal STATIC IMPORTED)
set_property(TARGET hal-cpp_wpiHal PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/hal-cpp/windows/x86-64/shared/wpiHal.lib")
set_target_properties(hal-cpp_wpiHal PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot hal-cpp_wpiHal)
add_library(hal-cpp_wpiHaljni STATIC IMPORTED)
set_property(TARGET hal-cpp_wpiHaljni PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/hal-cpp/windows/x86-64/shared/wpiHaljni.lib")
set_target_properties(hal-cpp_wpiHaljni PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot hal-cpp_wpiHaljni)
add_library(cameraserver-cpp_cameraserver STATIC IMPORTED)
set_property(TARGET cameraserver-cpp_cameraserver PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/cameraserver-cpp/windows/x86-64/shared/cameraserver.lib")
set_target_properties(cameraserver-cpp_cameraserver PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot cameraserver-cpp_cameraserver)
add_library(wpilibNewCommands-cpp_wpilibNewCommands STATIC IMPORTED)
set_property(TARGET wpilibNewCommands-cpp_wpilibNewCommands PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/wpilibNewCommands-cpp/windows/x86-64/shared/wpilibNewCommands.lib")
set_target_properties(wpilibNewCommands-cpp_wpilibNewCommands PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpilibNewCommands-cpp_wpilibNewCommands)
add_library(opencv-cpp_opencv_calib3d452 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_calib3d452 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_calib3d452.lib")
set_target_properties(opencv-cpp_opencv_calib3d452 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_calib3d452)
add_library(opencv-cpp_opencv_core452 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_core452 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_core452.lib")
set_target_properties(opencv-cpp_opencv_core452 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_core452)
add_library(opencv-cpp_opencv_features2d452 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_features2d452 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_features2d452.lib")
set_target_properties(opencv-cpp_opencv_features2d452 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_features2d452)
add_library(opencv-cpp_opencv_flann452 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_flann452 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_flann452.lib")
set_target_properties(opencv-cpp_opencv_flann452 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_flann452)
add_library(opencv-cpp_opencv_gapi452 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_gapi452 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_gapi452.lib")
set_target_properties(opencv-cpp_opencv_gapi452 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_gapi452)
add_library(opencv-cpp_opencv_highgui452 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_highgui452 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_highgui452.lib")
set_target_properties(opencv-cpp_opencv_highgui452 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_highgui452)
add_library(opencv-cpp_opencv_imgcodecs452 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_imgcodecs452 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_imgcodecs452.lib")
set_target_properties(opencv-cpp_opencv_imgcodecs452 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_imgcodecs452)
add_library(opencv-cpp_opencv_imgproc452 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_imgproc452 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_imgproc452.lib")
set_target_properties(opencv-cpp_opencv_imgproc452 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_imgproc452)
add_library(opencv-cpp_opencv_ml452 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_ml452 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_ml452.lib")
set_target_properties(opencv-cpp_opencv_ml452 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_ml452)
add_library(opencv-cpp_opencv_objdetect452 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_objdetect452 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_objdetect452.lib")
set_target_properties(opencv-cpp_opencv_objdetect452 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_objdetect452)
add_library(opencv-cpp_opencv_photo452 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_photo452 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_photo452.lib")
set_target_properties(opencv-cpp_opencv_photo452 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_photo452)
add_library(opencv-cpp_opencv_stitching452 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_stitching452 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_stitching452.lib")
set_target_properties(opencv-cpp_opencv_stitching452 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_stitching452)
add_library(opencv-cpp_opencv_video452 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_video452 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_video452.lib")
set_target_properties(opencv-cpp_opencv_video452 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_video452)
add_library(opencv-cpp_opencv_videoio452 STATIC IMPORTED)
set_property(TARGET opencv-cpp_opencv_videoio452 PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/opencv-cpp/windows/x86-64/shared/opencv_videoio452.lib")
set_target_properties(opencv-cpp_opencv_videoio452 PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot opencv-cpp_opencv_videoio452)
add_library(wpiapi-cpp_CTRE_Phoenix_WPI STATIC IMPORTED)
set_property(TARGET wpiapi-cpp_CTRE_Phoenix_WPI PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/wpiapi-cpp/windows/x86-64/shared/CTRE_Phoenix_WPI.lib")
set_target_properties(wpiapi-cpp_CTRE_Phoenix_WPI PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpiapi-cpp_CTRE_Phoenix_WPI)
add_library(api-cpp_CTRE_Phoenix STATIC IMPORTED)
set_property(TARGET api-cpp_CTRE_Phoenix PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/api-cpp/windows/x86-64/shared/CTRE_Phoenix.lib")
set_target_properties(api-cpp_CTRE_Phoenix PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot api-cpp_CTRE_Phoenix)
add_library(cci_CTRE_PhoenixCCI STATIC IMPORTED)
set_property(TARGET cci_CTRE_PhoenixCCI PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/cci/windows/x86-64/shared/CTRE_PhoenixCCI.lib")
set_target_properties(cci_CTRE_PhoenixCCI PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot cci_CTRE_PhoenixCCI)
add_library(wpiapi-cpp-sim_CTRE_Phoenix_WPISim STATIC IMPORTED)
set_property(TARGET wpiapi-cpp-sim_CTRE_Phoenix_WPISim PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/wpiapi-cpp-sim/windows/x86-64/shared/CTRE_Phoenix_WPISim.lib")
set_target_properties(wpiapi-cpp-sim_CTRE_Phoenix_WPISim PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot wpiapi-cpp-sim_CTRE_Phoenix_WPISim)
add_library(api-cpp-sim_CTRE_PhoenixSim STATIC IMPORTED)
set_property(TARGET api-cpp-sim_CTRE_PhoenixSim PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/api-cpp-sim/windows/x86-64/shared/CTRE_PhoenixSim.lib")
set_target_properties(api-cpp-sim_CTRE_PhoenixSim PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot api-cpp-sim_CTRE_PhoenixSim)
add_library(cci-sim_CTRE_PhoenixCCISim STATIC IMPORTED)
set_property(TARGET cci-sim_CTRE_PhoenixCCISim PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/cci-sim/windows/x86-64/shared/CTRE_PhoenixCCISim.lib")
set_target_properties(cci-sim_CTRE_PhoenixCCISim PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot cci-sim_CTRE_PhoenixCCISim)
add_library(simTalonSRX_CTRE_SimTalonSRX STATIC IMPORTED)
set_property(TARGET simTalonSRX_CTRE_SimTalonSRX PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/simTalonSRX/windows/x86-64/shared/CTRE_SimTalonSRX.lib")
set_target_properties(simTalonSRX_CTRE_SimTalonSRX PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot simTalonSRX_CTRE_SimTalonSRX)
add_library(simTalonFX_CTRE_SimTalonFX STATIC IMPORTED)
set_property(TARGET simTalonFX_CTRE_SimTalonFX PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/simTalonFX/windows/x86-64/shared/CTRE_SimTalonFX.lib")
set_target_properties(simTalonFX_CTRE_SimTalonFX PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot simTalonFX_CTRE_SimTalonFX)
add_library(simVictorSPX_CTRE_SimVictorSPX STATIC IMPORTED)
set_property(TARGET simVictorSPX_CTRE_SimVictorSPX PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/simVictorSPX/windows/x86-64/shared/CTRE_SimVictorSPX.lib")
set_target_properties(simVictorSPX_CTRE_SimVictorSPX PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot simVictorSPX_CTRE_SimVictorSPX)
add_library(simPigeonIMU_CTRE_SimPigeonIMU STATIC IMPORTED)
set_property(TARGET simPigeonIMU_CTRE_SimPigeonIMU PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/simPigeonIMU/windows/x86-64/shared/CTRE_SimPigeonIMU.lib")
set_target_properties(simPigeonIMU_CTRE_SimPigeonIMU PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot simPigeonIMU_CTRE_SimPigeonIMU)
add_library(simCANCoder_CTRE_SimCANCoder STATIC IMPORTED)
set_property(TARGET simCANCoder_CTRE_SimCANCoder PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/simCANCoder/windows/x86-64/shared/CTRE_SimCANCoder.lib")
set_target_properties(simCANCoder_CTRE_SimCANCoder PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot simCANCoder_CTRE_SimCANCoder)
add_library(REVLib-cpp_REVLib STATIC IMPORTED)
set_property(TARGET REVLib-cpp_REVLib PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/REVLib-cpp/windows/x86-64/shared/REVLib.lib")
set_target_properties(REVLib-cpp_REVLib PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot REVLib-cpp_REVLib)
add_library(REVLib-driver_REVLibDriver STATIC IMPORTED)
set_property(TARGET REVLib-driver_REVLibDriver PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/REVLib-driver/windows/x86-64/shared/REVLibDriver.lib")
set_target_properties(REVLib-driver_REVLibDriver PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot REVLib-driver_REVLibDriver)
add_library(PhotonLib-cpp_Photon STATIC IMPORTED)
set_property(TARGET PhotonLib-cpp_Photon PROPERTY IMPORTED_LOCATION "c:/Users/progr/AppData/Roaming/Code/User/globalStorage/miscar.vscode-miscar/local/PhotonLib-cpp/windows/x86-64/shared/Photon.lib")
set_target_properties(PhotonLib-cpp_Photon PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(robot PhotonLib-cpp_Photon) 



endif()